End of Section 11

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings":{
+    "CloudName":"dphswz1np",
+    "APIKey":"334793332446965",
+    "APISecret":"6YY70J898y2Unnt_5RtzHhmDqZA"
+  }
 }
